# count_words

./: .gitignore  CMakeLists.txt  Readme.md  count_words  count_words.main.cpp  count_words.sh  count_words_lib.cpp  count_words_lib.h  count_words_test.cpp  lab.cpp
data/: Othello.txt
